--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## Author Francois Michaut
 ##
 ## Started on  Sun Aug 28 19:26:51 2022 Francois Michaut
-## Last update Thu Nov 23 18:30:41 2023 Francois Michaut
+## Last update Sat Dec  2 10:33:43 2023 Francois Michaut
 ##
 ## CMakeLists.txt : CMake to build the CppSockets library
 ##
@@ -17,9 +17,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 
 project(LibCppSockets VERSION 0.1.0 LANGUAGES C CXX)
-configure_file(include/CppSockets/Version.hpp.in CppSockets/Version.hpp)
-
-include_directories(${CMAKE_CURRENT_BINARY_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/include")
+configure_file(include/CppSockets/Version.hpp.in include/CppSockets/Version.hpp)
 
 add_library(cppsockets
   source/Address.cpp
@@ -27,6 +25,8 @@ add_library(cppsockets
   source/Socket.cpp
   source/TlsSocket.cpp
 )
+target_include_directories(cppsockets PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>)
+# target_include_directories(cppsockets INTERFACE $<INSTALL_INTERFACE:include>)
 
 find_package(OpenSSL 3.0 COMPONENTS SSL)
 target_link_libraries(cppsockets OpenSSL::SSL)
