Add CI scripts (#1)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 ## Author Francois Michaut
 ##
 ## Started on  Sun Aug 28 19:26:51 2022 Francois Michaut
-## Last update Sat Dec  2 10:33:43 2023 Francois Michaut
+## Last update Sat Dec  2 17:45:28 2023 Francois Michaut
 ##
 ## CMakeLists.txt : CMake to build the CppSockets library
 ##
@@ -26,20 +26,11 @@ add_library(cppsockets
   source/TlsSocket.cpp
 )
 target_include_directories(cppsockets PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>)
-# target_include_directories(cppsockets INTERFACE $<INSTALL_INTERFACE:include>)
 
 find_package(OpenSSL 3.0 COMPONENTS SSL)
 target_link_libraries(cppsockets OpenSSL::SSL)
 
-add_custom_target(test
-  COMMAND ${CMAKE_COMMAND} --log-level=WARNING
-  -B "${CMAKE_CURRENT_BINARY_DIR}/tests"
-  -S "${CMAKE_CURRENT_SOURCE_DIR}/tests"
-  -G ${CMAKE_GENERATOR}
-  COMMAND ${CMAKE_COMMAND} -E cmake_echo_color
-  --switch=$(COLOR) --cyan "Building tests..."
-  COMMAND ${CMAKE_COMMAND}
-  --build "${CMAKE_CURRENT_BINARY_DIR}/tests" -- --quiet
-  COMMAND ${CMAKE_MAKE_PROGRAM}
-  -C "${CMAKE_CURRENT_BINARY_DIR}/tests" test ARGS=--output-on-failure
-  )
+option(CPPSOCKETS_TESTS "TRUE to build the libcppsockets tests" FALSE)
+if(CPPSOCKETS_TESTS)
+  add_subdirectory(tests)
+endif()
