--- a/.github/workflows/windows-vcpkg/action.yml
+++ b/.github/workflows/windows-vcpkg/action.yml
@@ -27,7 +27,7 @@ runs:
       shell: powershell
       run: |
         echo "CMAKE_TOOLCHAIN_FILE=${env:VCPKG_ROOT}\scripts\buildsystems\vcpkg.cmake" | Out-File -FilePath $env:GITHUB_ENV -Append
-        vcpkg install --debug
+        vcpkg install
 
     - name: Always Save VCPKG Cache (Windows)
       if: always() && runner.os == 'Windows' && steps.fetch-vcpkg-cache.outputs.cache-hit != 'true'
